fixed spacing for h4 on CreateProfilePage on smaller screens

--- a/src/routes/CreateProfilePage/CreateProfilePage.css
+++ b/src/routes/CreateProfilePage/CreateProfilePage.css
@@ -32,7 +32,7 @@
   }
 
   .profile_edit_form h4 {
-    line-height: 0px;
+    margin-top: 12px;
   }
 
 }
